# hello-aws-sdk-for-rust

./: Cargo.toml  README.md
src/: main.rs
